@@ -1,3 +1,8 @@
+2006-02-26  Roland McGrath  <roland@redhat.com>
+
+	* offline.c (dwfl_report_offline): Account for dwfl_report_elf having
+	aligned up from DWFL->offline_next_address when checking for overlap.
+
 2005-12-22  Roland McGrath  <roland@redhat.com>
 
 	* argp-std.c (parse_opt): Call dwfl_end in failure cases.
